--- a/index.css
+++ b/index.css
@@ -1,44 +1,103 @@
-/* body > * {
-  all: unset;
-} */
-
-body {
-  color: #34495e;
-  background-color: #2c3e50;
+* {
+    margin: 0;
 }
 
-/* .btn {
-  cursor: pointer;
-} */
+body {
+    display: flex;
+    justify-content: flex-end;
+}
 
-/* .clicked {
-  color: #7f8c8d;
-} */
+.container {
+    color: #34495e;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: 30px 50px 0 0;
+}
+
+.container > * {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+button {
+    margin-left: 10px;
+    border-radius: 50%;
+    font-size: 15px;
+    border: transparent;
+    background-color: transparent;
+    outline: none;
+    vertical-align: middle;
+}
+
+.js-clock {
+    font-size: 30px;
+    text-align: center;
+}
+
+.js-greetings {
+    font-size: 30px;
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+.js-toDoForm input {
+    font-size: 20px;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    margin-bottom: 40px;
+}
+.js-toDoList {
+    font-size: 30px;
+    padding-left: 40px;
+    margin-bottom: 20px;
+    font-weight: 700;
+    color: black;
+    box-sizing: border-box;
+}
+
+.js-weather {
+    font-size: 25px;
+}
+
+li {
+}
 
 .form,
 .greetings {
-  display: none;
+    display: none;
 }
 
 .showing {
-  display: block;
+    display: block;
 }
 
 @keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 .bgImage {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  animation: fadeIn 1s linear;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    animation: fadeIn 1s linear;
 }
+
+/* btn {
+    cursor: pointer;
+} */
+/* 
+.clicked {
+    color: #7f8c8d;
+} */
